tests/purs/passing/NonOrphanInstanceFunDepExtra/Lib.purs
module Lib where
-- covering sets: {{f, l}}
class C f l r | l -> r
data L
