tests/purs/failing/OrphanInstanceWithDetermined/Lib.purs
module Lib where
-- covering sets: {{f, l}}
class C f l r | l -> r
data F
data L
